--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    username: macbookpro
-    password: 19801980
+    username: postgres
+    password: math2606
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/db_control
 
@@ -9,6 +9,4 @@ spring:
     hibernate:
       ddl-auto: create # default none
     show-sql: true
-server:
-  port: 1111
 
