--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,8 +11,20 @@ spring:
       name: admin
   jpa:
     hibernate:
-      ddl-auto: create # default none
+      ddl-auto: update # default none
     show-sql: true
+
+  mail:
+    host: sandbox.smtp.mailtrap.io
+    port: 587
+    username: 15c581ab473b53
+    password: 13b44caa4b1922
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 springdoc:
   swagger-ui:
