--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,16 @@ configurations {
 
 repositories {
     mavenCentral()
+
+
 }
 
+
 dependencies {
+    implementation platform('org.springframework.cloud:spring-cloud-dependencies:2025.0.0')
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
