--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,7 @@ repositories {
 
 
 dependencies {
-    implementation platform('org.springframework.cloud:spring-cloud-dependencies:2025.0.0')
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
