--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
-    id "org.flywaydb.flyway" version "9.20.0"
 }
 
 group = 'uz.pdp'
@@ -30,8 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.liquibase:liquibase-core'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'org.flywaydb:flyway-core:9.20.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
@@ -56,11 +55,4 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-flyway {
-    url = 'jdbc:postgresql://localhost:5432/db_control?currentSchema=test_fly'
-    user = 'macbookpro'
-    password = '19801980'
-    locations = ['classpath:db/migration']
 }
