Vers 1 with categorized packages

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    username: macbookpro
-    password: 19801980
+    username: postgres
+    password: 1987891
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/test_eop
+    url: jdbc:postgresql://localhost:5432/db_controlw
 
   jpa:
     hibernate:
