--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,13 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/test
 
+
+
+  cache:
+    type: redis
+    redis:
+      time-to-live: 60s
+
   jpa:
     hibernate:
       ddl-auto: update
